modificar fecha, author y mensaje de commit

--- a/comandos GIT/Fundamentos GIT.ipynb
+++ b/comandos GIT/Fundamentos GIT.ipynb
@@ -393,7 +393,7 @@
    "metadata": {},
    "source": [
     "# <center> FLUJO DE INFORMACION ENTRE RAMAS DE UN REPOSITORIO GIT</center>\n",
-    "## <center> BRANCH STRATREGY</center>"
+    "# <center> BRANCH STRATEGY - GIT FLOW</center>"
    ]
   },
   {
@@ -2020,6 +2020,252 @@
     "ejecutar_comando_git(comando)\n",
     "\n",
     "comando = 'git commit'\n",
+    "ejecutar_comando_git(comando)\n",
+    "\n",
+    "comando = 'git log'\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d5dff30-22c7-4c76-ae16-42ef09f65e42",
+   "metadata": {},
+   "source": [
+    "## CAMBIAR EL MENSAJE DE UN COMMIT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "218eb889-c446-4a78-9ee5-dffa3fc2c62f",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git commit --amend --no-edit -m \"asunto del commit actualizado\"\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "[utils a753774] asunto del commit actualizado\n",
+      " Date: Mon Jul 31 07:31:40 2000 +0000\n",
+      " 1 file changed, 1 insertion(+)\n",
+      " create mode 100644 main.py\n",
+      "##############################################################################################################\n",
+      "\n",
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git log\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "commit a753774cc43953f57f39b6c49ec55faa21250137\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Mon Jul 31 07:31:40 2000 +0000\n",
+      "\n",
+      "    asunto del commit actualizado\n",
+      "\n",
+      "commit 8c7d390ad316060f9f22a020bc4f825978c1f9fe\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Sat Apr 8 19:04:57 2023 -0500\n",
+      "\n",
+      "    rrr\n",
+      "\n",
+      "commit a144f3a9d3173c11a36e36bf5e5e9f8db26feb23\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Sat Apr 8 19:03:15 2023 -0500\n",
+      "\n",
+      "    uuuyyy\n",
+      "    \n",
+      "    1ee\n",
+      "    2rrt\n",
+      "    33jjj\n",
+      "\n",
+      "commit 08c5ec4161ef46f4a7cdac4941247c1c522598a0\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Sat Apr 8 19:01:41 2023 -0500\n",
+      "\n",
+      "    adicionados archivos connection.java y Manifest.yaml\n",
+      "    \n",
+      "    los archivos de este commit ayudan con la configuracion de la aplicacion....\n",
+      "\n",
+      "commit 4700b6c5c90ca456f52b761f30c60994ecb6fbb0\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Sat Apr 8 19:01:24 2023 -0500\n",
+      "\n",
+      "    adicionado archivo INFO.txt\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comando = 'git commit --amend --no-edit -m \"asunto del commit actualizado\"'\n",
+    "ejecutar_comando_git(comando)\n",
+    "\n",
+    "comando = 'git log'\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7491dacf-b05c-4682-a89f-d4a84b098084",
+   "metadata": {},
+   "source": [
+    "## CAMBIAR EL AUTOR DE UN COMMIT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "c2925ca4-a2e6-4822-b50c-a9d839524cbf",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git commit --amend --no-edit --author=jorgecardona@utp.edu.co\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "[utils 3b981df] TTTT\n",
+      " Date: Mon Jul 31 07:31:40 2000 +0000\n",
+      " 1 file changed, 1 insertion(+)\n",
+      " create mode 100644 main.py\n",
+      "##############################################################################################################\n",
+      "\n",
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git log\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "commit 3b981df20ac9e4c26cc1591f31849c29b3e61f2a\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Mon Jul 31 07:31:40 2000 +0000\n",
+      "\n",
+      "    TTTT\n",
+      "\n",
+      "commit 8c7d390ad316060f9f22a020bc4f825978c1f9fe\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Sat Apr 8 19:04:57 2023 -0500\n",
+      "\n",
+      "    rrr\n",
+      "\n",
+      "commit a144f3a9d3173c11a36e36bf5e5e9f8db26feb23\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Sat Apr 8 19:03:15 2023 -0500\n",
+      "\n",
+      "    uuuyyy\n",
+      "    \n",
+      "    1ee\n",
+      "    2rrt\n",
+      "    33jjj\n",
+      "\n",
+      "commit 08c5ec4161ef46f4a7cdac4941247c1c522598a0\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Sat Apr 8 19:01:41 2023 -0500\n",
+      "\n",
+      "    adicionados archivos connection.java y Manifest.yaml\n",
+      "    \n",
+      "    los archivos de este commit ayudan con la configuracion de la aplicacion....\n",
+      "\n",
+      "commit 4700b6c5c90ca456f52b761f30c60994ecb6fbb0\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Sat Apr 8 19:01:24 2023 -0500\n",
+      "\n",
+      "    adicionado archivo INFO.txt\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "autor = 'jorgecardona@utp.edu.co'\n",
+    "comando = 'git commit --amend --no-edit --author={autor}'.format(autor=autor)\n",
+    "ejecutar_comando_git(comando)\n",
+    "\n",
+    "comando = 'git log'\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3022d61-e66e-4124-bfdf-d4fcf4bb93a9",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## CAMBIAR LA FECHA DE UN COMMIT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7d85cbc7-e042-4ac1-9f7e-8620313ada6b",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git commit --amend --no-edit --date \"31 Jul 2000 07:31:40 UTC\"\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "[utils 6987677] TTTT\n",
+      " Date: Mon Jul 31 07:31:40 2000 +0000\n",
+      " 1 file changed, 1 insertion(+)\n",
+      " create mode 100644 main.py\n",
+      "##############################################################################################################\n",
+      "\n",
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git log\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "commit 69876775cca3a91de36ebaece86bbd94dc0c7d25\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Mon Jul 31 07:31:40 2000 +0000\n",
+      "\n",
+      "    TTTT\n",
+      "\n",
+      "commit 8c7d390ad316060f9f22a020bc4f825978c1f9fe\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Sat Apr 8 19:04:57 2023 -0500\n",
+      "\n",
+      "    rrr\n",
+      "\n",
+      "commit a144f3a9d3173c11a36e36bf5e5e9f8db26feb23\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Sat Apr 8 19:03:15 2023 -0500\n",
+      "\n",
+      "    uuuyyy\n",
+      "    \n",
+      "    1ee\n",
+      "    2rrt\n",
+      "    33jjj\n",
+      "\n",
+      "commit 08c5ec4161ef46f4a7cdac4941247c1c522598a0\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Sat Apr 8 19:01:41 2023 -0500\n",
+      "\n",
+      "    adicionados archivos connection.java y Manifest.yaml\n",
+      "    \n",
+      "    los archivos de este commit ayudan con la configuracion de la aplicacion....\n",
+      "\n",
+      "commit 4700b6c5c90ca456f52b761f30c60994ecb6fbb0\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Sat Apr 8 19:01:24 2023 -0500\n",
+      "\n",
+      "    adicionado archivo INFO.txt\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comando = 'git commit --amend --no-edit --date \"31 Jul 2000 07:31:40 UTC\"'\n",
     "ejecutar_comando_git(comando)\n",
     "\n",
     "comando = 'git log'\n",
@@ -5139,8 +5385,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d3c7adf-a33d-48ff-b8b8-c1087293fec0",
+   "id": "2bff3726-faf8-4983-ac7f-601c74cb9b69",
    "metadata": {},
+   "source": [
+    "# <center> PULL REQUEST"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d3c7adf-a33d-48ff-b8b8-c1087293fec0",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## ELIMINAR RAMA"
    ]
