modificar fecha, author y mensaje de commit Actualizado

--- a/comandos GIT/Fundamentos GIT.ipynb
+++ b/comandos GIT/Fundamentos GIT.ipynb
@@ -2181,6 +2181,7 @@
     }
    ],
    "source": [
+    "# TIENE que estar el nombre entre los usuarios del repositorio\n",
     "autor = 'jorgecardona@utp.edu.co'\n",
     "comando = 'git commit --amend --no-edit --author={autor}'.format(autor=autor)\n",
     "ejecutar_comando_git(comando)\n",
