adicionado eliminar variable en comparar dataframes

--- a/Pandas/Pandas.ipynb
+++ b/Pandas/Pandas.ipynb
@@ -16197,7 +16197,7 @@
    "source": [
     "# como ROJO solo tiene 2 valores usa de ultimo el NaN y ordena de menor a mayor la segunda columna, y luego la tercera...\n",
     "display(df_menores.nsmallest(2, columns=['VERDE','ROJO'], keep='last'))\n",
-    "#del df_menores\n",
+    "del df_menores\n",
     "garbage_colector.collect(), garbage_colector.get_threshold()"
    ]
   },
